# pdf2md

./: .gitignore  Cargo.toml  README.md  llms.txt  package.json  pnpm-lock.yaml
docs/: agents.md  benchmarks.md
evals/: README.md
evals/corpus/noise/: labels.json
evals/corpus/real/: sources.json
evals/corpus/tables/: labels.json
evals/corpus/text/: labels.json
evals/src/: bench.ts  converters.ts  corpus.ts  external-tables.ts  fetch-real.ts  generate-corpus.ts  judge.ts  leaderboard.ts  noise-bench.ts  paths.ts  pdf2md-proto.ts  real-corpus.ts  run.ts  table-bench.ts  text-bench.ts  util.ts
scripts/: fetch-pdfium.sh  install-skill.sh
skills/pdf2md/: SKILL.md
src/: main.rs
